Revision history for {{$dist->name}}

{{$NEXT}}
          - minted dists once again use the default 'installer' value (now
            [MakeMaker::Fallback] and [ModuleBuildTiny], since 0.025)

0.026     2013-09-25 02:00:04Z (Karen Etheridge)
          - skip relevant tests when optional dependencies are not installed

0.025     2013-09-22 22:04:46Z (Karen Etheridge)
          - added missing dependency on [MojibakeTests] (RT#88807)
          - fixed bad dependency for NoTabs tester that changed names
          - make tests run without git again (broken in 0.024) by removing all
            git-based plugins for testing
          - now generating a t/00-report-prereqs.t
          - 'installer' option can now be specified more than once, for
            stacking plugins
          - new installer default: MakeMaker::Fallback and ModuleBuildTiny
            (RT#88642)

0.024     2013-09-19 02:29:14Z (Karen Etheridge)
          - now also support the server = catagits option, for Catalyst
            repositories hosted at Shadowcat Systems
          - switch to [Test::NoTabs], also testing examples/ files
          - bump prereq on [Test::CheckDeps] to get CPAN::Meta::Check
            dependency that we can now remove from here
          - vim modeline added to .pm in minted dist
          - default 'installer' backend now defaults to 'none', forcing
            consumers to explicitly state a preference; minted dists specify
            ModuleBuildTiny, the previous default (RT#88642)

0.023     2013-09-11 01:43:22Z (Karen Etheridge)
          - now checking for stale prereqs at dist release time

0.022     2013-09-10 01:48:53Z (Karen Etheridge)
          - warnings tests bypassed during installation, to prevent
            installation issues in the presence of deprecation warnings from
            upstream dependencies (in this case, via Moose 2.1100) - and
            similar change made in test generated via minting profile