@@ -50,6 +50,7 @@ Dist::Zilla::Plugin::Git::Describe = 0
 Dist::Zilla::Plugin::PkgVersion = 4.300036
 Dist::Zilla::Plugin::PodWeaver = 0
 Dist::Zilla::Plugin::NextRelease = 4.300018
+Dist::Zilla::Plugin::AutoMetaResources = 0
 Dist::Zilla::Plugin::Authority = 0
 Dist::Zilla::Plugin::MetaNoIndex = 0
 Dist::Zilla::Plugin::MetaProvides::Package = 0
@@ -57,6 +58,7 @@ Dist::Zilla::Plugin::MetaConfig = 0
 ;Dist::Zilla::Plugin::ContributorsFromGit = 0
 Dist::Zilla::Plugin::AutoPrereqs = 0
 Dist::Zilla::Plugin::MinimumPerl = 0
+Dist::Zilla::Plugin::Prereqs = 0
 Dist::Zilla::Plugin::ReadmeAnyFromPod = 0
 Dist::Zilla::Plugin::InstallGuide = 0
 Dist::Zilla::Plugin::CopyFilesFromBuild = 0
@@ -98,7 +100,6 @@ Dist::Zilla::Plugin::MakeMaker::Fallback = 0
 Dist::Zilla::Plugin::ModuleBuildTiny = 0.004
 Dist::Zilla::Plugin::GithubMeta = 0
 Dist::Zilla::Plugin::GitHub::Update = 0
-Dist::Zilla::Plugin::AutoMetaResources = 0
 
 [Prereqs / MintingProfile]
 ; TODO: these should be added
@@ -163,7 +164,6 @@ Test::Mojibake = 0
 -relationship = requires
 Dist::Zilla::Plugin::MakeMaker::Fallback = 0
 Dist::Zilla::Plugin::GitHub::Update = 0
-Dist::Zilla::Plugin::AutoMetaResources = 0
 
 [MetaResources]
 x_MailingList = http://www.listbox.com/subscribe/?list_id=139292
